cmake_minimum_required(VERSION 3.3)
project(Autodock)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    src/autodock/alea.cc
    src/autodock/alea.h
    src/autodock/analysis.cc
    src/autodock/analysis.h
    src/autodock/atom_parameter_manager.cc
    src/autodock/atom_parameter_manager.h
    src/autodock/autocomm.h
    src/autodock/autoglobal.h
    src/autodock/banner.cc
    src/autodock/banner.h
    src/autodock/bestpdb.cc
    src/autodock/bestpdb.h
    src/autodock/calculateEnergies.cc
    src/autodock/calculateEnergies.h
    src/autodock/call_cpso.cc
    src/autodock/call_cpso.h
    src/autodock/call_glss.cc
    src/autodock/call_glss.h
    src/autodock/call_gs.cc
    src/autodock/call_gs.h
    src/autodock/call_ls.cc
    src/autodock/call_ls.h
    src/autodock/center_ligand.cc
    src/autodock/center_ligand.h
    src/autodock/changeState.cc
    src/autodock/changeState.h
    src/autodock/check_header_float.cc
    src/autodock/check_header_float.h
    src/autodock/check_header_int.cc
    src/autodock/check_header_int.h
    src/autodock/check_header_line.cc
    src/autodock/check_header_line.h
    src/autodock/clmode.cc
    src/autodock/clmode.h
    src/autodock/cluster_analysis.cc
    src/autodock/cluster_analysis.h
    src/autodock/cnv_state_to_coords.cc
    src/autodock/cnv_state_to_coords.h
    src/autodock/coliny.cc
    src/autodock/coliny.h
    src/autodock/com.cc
    src/autodock/conformation_sampler.cc
    src/autodock/conformation_sampler.h
    src/autodock/constants.h
    src/autodock/dimLibrary.cc
    src/autodock/dimLibrary.h
    src/autodock/distdepdiel.cc
    src/autodock/distdepdiel.h
    src/autodock/dpftoken.h
    src/autodock/eintcal.cc
    src/autodock/eintcal.h
    src/autodock/eintcalPrint.cc
    src/autodock/eintcalPrint.h
    src/autodock/energy.h
    src/autodock/eval.cc
    src/autodock/eval.h
    src/autodock/gencau.cc
    src/autodock/gencau.h
    src/autodock/get_atom_type.cc
    src/autodock/get_atom_type.h
    src/autodock/getInitialState.cc
    src/autodock/getInitialState.h
    src/autodock/getpdbcrds.cc
    src/autodock/getpdbcrds.h
    src/autodock/getrms.cc
    src/autodock/getrms.h
    src/autodock/globals.h
    src/autodock/grid.h
    src/autodock/gs.cc
    src/autodock/gs.h
    src/autodock/hybrids.h
    src/autodock/initautodock.cc
    src/autodock/initautodock.h
    src/autodock/input_state.cc
    src/autodock/input_state.h
    src/autodock/intnbtable.cc
    src/autodock/intnbtable.h
    src/autodock/investigate.cc
    src/autodock/investigate.h
    src/autodock/linpack.cc
    src/autodock/ls.cc
    src/autodock/ls.h
    src/autodock/main.cc
    src/autodock/main.h
    src/autodock/map_declare.h
    src/autodock/mapping.cc
    src/autodock/mdist.h
    src/autodock/mingw_getrusage.cc
    src/autodock/mingw_sys_times.h
    src/autodock/mingw_sysconf.h
    src/autodock/minmeanmax.cc
    src/autodock/mkNewState.cc
    src/autodock/mkNewState.h
    src/autodock/mkRandomState.cc
    src/autodock/mkRandomState.h
    src/autodock/mkTorTree.cc
    src/autodock/mkTorTree.h
    src/autodock/nbe.cc
    src/autodock/nbe.h
    src/autodock/nonbonds.cc
    src/autodock/nonbonds.h
    src/autodock/openfile.cc
    src/autodock/openfile.h
    src/autodock/output_state.cc
    src/autodock/output_state.h
    src/autodock/parameters.h
    src/autodock/parse_dpf_line.cc
    src/autodock/parse_dpf_line.h
    src/autodock/parse_param_line.cc
    src/autodock/parse_param_line.h
    src/autodock/parse_PDBQT_line.cc
    src/autodock/parse_PDBQT_line.h
    src/autodock/parse_trj_line.cc
    src/autodock/parse_trj_line.h
    src/autodock/parsetypes.cc
    src/autodock/parsetypes.h
    src/autodock/partokens.h
    src/autodock/PDBQT_tokens.h
    src/autodock/prClusterHist.cc
    src/autodock/prClusterHist.h
    src/autodock/prInitialState.cc
    src/autodock/prInitialState.h
    src/autodock/print_2x.cc
    src/autodock/print_2x.h
    src/autodock/print_atomic_energies.cc
    src/autodock/print_atomic_energies.h
    src/autodock/print_avsfld.cc
    src/autodock/print_avsfld.h
    src/autodock/print_rem.cc
    src/autodock/print_rem.h
    src/autodock/printdate.cc
    src/autodock/printdate.h
    src/autodock/printEnergies.cc
    src/autodock/printEnergies.h
    src/autodock/printhms.cc
    src/autodock/printhms.h
    src/autodock/prTorConList.cc
    src/autodock/prTorConList.h
    src/autodock/pso.cc
    src/autodock/pso.h
    src/autodock/qmultiply.cc
    src/autodock/qmultiply.h
    src/autodock/qtransform.cc
    src/autodock/qtransform.h
    src/autodock/quicksort.cc
    src/autodock/quicksort.h
    src/autodock/ranlib.cc
    src/autodock/ranlib.h
    src/autodock/read_parameter_library.cc
    src/autodock/read_parameter_library.h
    src/autodock/readfield.cc
    src/autodock/readfield.h
    src/autodock/readmap.cc
    src/autodock/readmap.h
    src/autodock/readPDBQT.cc
    src/autodock/readPDBQT.h
    src/autodock/rep.cc
    src/autodock/rep.h
    src/autodock/rep_constants.h
    src/autodock/scauchy.cc
    src/autodock/setflags.cc
    src/autodock/setflags.h
    src/autodock/simanneal.cc
    src/autodock/simanneal.h
    src/autodock/sort_enrg.cc
    src/autodock/sort_enrg.h
    src/autodock/stack.cc
    src/autodock/stack.h
    src/autodock/stateLibrary.cc
    src/autodock/stateLibrary.h
    src/autodock/stop.cc
    src/autodock/stop.h
    src/autodock/strindex.cc
    src/autodock/strindex.h
    src/autodock/structs.h
    src/autodock/success.cc
    src/autodock/success.h
    src/autodock/support.cc
    src/autodock/support.h
    src/autodock/swap.cc
    src/autodock/swap.h
    src/autodock/test_times.cc
    src/autodock/threadlog.cc
    src/autodock/threadlog.h
    src/autodock/timesys.cc
    src/autodock/timesys.h
    src/autodock/timesyshms.cc
    src/autodock/timesyshms.h
    src/autodock/torNorVec.cc
    src/autodock/torNorVec.h
    src/autodock/torsion.cc
    src/autodock/torsion.h
    src/autodock/trilinterp.cc
    src/autodock/trilinterp.h
    src/autodock/trjtokens.h
    src/autodock/typedefs.h
    src/autodock/usage.cc
    src/autodock/usage.h
    src/autodock/version.h
    src/autodock/warn_bad_file.cc
    src/autodock/warn_bad_file.h
    src/autodock/weedbonds.cc
    src/autodock/weedbonds.h
    src/autodock/writePDBQT.cc
    src/autodock/writePDBQT.h
    src/autogrid/atom_parameter_manager.cpp
    src/autogrid/atom_parameter_manager.h
    src/autogrid/autogrid.h
    src/autogrid/banner.cpp
    src/autogrid/calc_vina_potential.cpp
    src/autogrid/calc_vina_potential.h
    src/autogrid/check_size.cpp
    src/autogrid/convertmap.cpp
    src/autogrid/distdepdiel.cpp
    src/autogrid/distdepdiel.h
    src/autogrid/gpfparser.cpp
    src/autogrid/gpftoken.h
    src/autogrid/grid.h
    src/autogrid/gridmap.h
    src/autogrid/init_gridmap.cpp
    src/autogrid/main.cpp
    src/autogrid/parameters.h
    src/autogrid/parm.h
    src/autogrid/parsetypes.cpp
    src/autogrid/prHMSfixed.cpp
    src/autogrid/prototypes.h
    src/autogrid/setflags.cpp
    src/autogrid/strindex.cpp
    src/autogrid/times.h
    src/autogrid/typedefs.h
    src/autogrid/util.cpp
    src/autogrid/util.h)

add_executable(Autodock ${SOURCE_FILES})